<resources>
    <string name="app_name">Wait</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="schedule_notification">Schedule Notification</string>
    <string name="setting">Setting</string>
    <string name="Q1">Waiting for something?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_third_fragment">Hello third fragment. Arg: %1$s</string>
    <string name="submit">Submit</string>
    <string name="am_waiting">I am waiting for …</string>
    <string name="was_waiting">I was waiting for …</string>
    <string name="set">Set</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="q0">When did that waiting happen?</string>
    <string name="q1">What are you waiting for?</string>
    <string name="q2">Where are you?</string>
    <string name="q3">Who is with you?</string>
    <string name="c31">Colleague</string>
    <string name="c32">Friend</string>
    <string name="c33">Family</string>
    <string name="c34">Alone</string>
    <string name="c35">Others (please describe)</string>
    <string name="q4">What are you going to do while waiting?</string>
    <string name="c41">Work</string>
    <string name="c42">Game</string>
    <string name="c43">Social</string>
    <string name="c44">Media</string>
    <string name="c45">Communication</string>
    <string name="c46">News</string>
    <string name="c47">Nothing</string>
    <string name="c48">Others (please describe)</string>
    <string name="q5">What were you doing before this waiting?</string>
    <string name="tapToAnswer">Tap to input your answer</string>
    <string name="example_when">E.g., 10 mins ago, 9:30, …</string>
    <string name="create_file">Create File</string>
</resources>